--- a/src/main/resources/templates/users/user_list.html
+++ b/src/main/resources/templates/users/user_list.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/layui/css/layui.css" media="all">
     <link rel="stylesheet" href="/css/custom.form.css">
     <style>
-        .custom-tree-item-clicked{color:#FC9003}
+        .custom-tree-item-clicked
+        {
+            color:#FC9003
+        }
     </style>
 </head>
 <body>
