--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -80,7 +80,9 @@
         <!-- 内容主体区域 -->
         <div class="layui-tab" lay-filter="tab" lay-allowclose="true">
             <ul class="layui-tab-title" style="width: 90%">
-                <li class="first-tab layui-this"><i class="layui-icon layui-icon-home"></i> <span>主页</span></li>
+                <li class="first-tab layui-this">
+                    <i class="layui-icon layui-icon-home"></i>
+                    <span>主页</span></li>
             </ul>
             <ul class="layui-nav closeBox">
                 <li class="layui-nav-item">
@@ -145,14 +147,18 @@
             if (data != "" && data.length > 0) {
                 var ulHtml = '<ul class="layui-nav layui-nav-tree layui-left-nav" onclick="ulHide()">';
                 if (data != null && data.length > 0) {
-
                     $.each(data, function (index, item) {
-                        if (index == 0) {
-                            ulHtml += '<li class="layui-nav-item layui-nav-itemed">';
-                        } else {
+                        // if (index == 0) {
+                        //     ulHtml += '<li class="layui-nav-item layui-nav-itemed">';
+                        // } else {
                             ulHtml += '<li class="layui-nav-item">';
+                        //}
+                        if(item.children.length == 0 ){
+                            ulHtml += '<a href="javascript:;' + item.url + '" data-url="' + item.url + '" data-title="' + item.title + '" data-id="' + item.id +'"class="menuNvaBar" >';
+                        }else {
+                            ulHtml += '<a href="javascript:;">';
                         }
-                        ulHtml += '<a href="javascript:;">';
+
                         if (!CoreUtil.isEmpty(item.icon)) {
                             ulHtml += '<i class="layui-icon '+item.icon+'"></i>';
                         }
@@ -178,11 +184,9 @@
                                     }
                                     ulHtml += '<cite> ' + child.title + '</cite></a></dd>';
                                 }
-
                                 if (child.children != null && child.children.length > 0 && child.type == 1) {
                                     ulHtml += '</dd>';
                                 }
-
                             });
                             ulHtml += "</dl>"
                         }
@@ -192,7 +196,6 @@
                 ulHtml += '</ul>';
                 $(".navBar").append(ulHtml);
                 element.init();  //初始化页面元素
-
             } else {
                 $("#navBarId").empty();
             }
@@ -219,10 +222,10 @@
                 })
                 if (isData == false) {
                     if (CoreUtil.isEmpty(dataid.attr("data-icon"))){
-                        var title = "<span>"+dataid.attr("data-title")+"</span>";
+                        var title = "<span>" + dataid.attr("data-title")+"</span>";
                         active.tabAdd(dataid.attr("data-url"), dataid.attr("data-id"), title);
                     } else {
-                        var title = "<span>"+dataid.attr("data-title")+"</span>";
+                        var title = "<span>" + dataid.attr("data-title")+"</span>";
                         title = '<i class="layui-icon '+dataid.attr("data-icon")+'"></i> ' + title;
                         active.tabAdd(dataid.attr("data-url"), dataid.attr("data-id"), title);
                     }
